--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
+  <link href="https://fonts.cdnfonts.com/css/made-soulmaze" rel="stylesheet"> 
 </head>
 <body class="background">
   <app-root></app-root>
