--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <link href="https://fonts.cdnfonts.com/css/made-soulmaze" rel="stylesheet"> 
 </head>
-<body class="background">
+<body class="backgroundApp">
   <app-root></app-root>
 </body>
 </html>
