--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <link href="https://fonts.cdnfonts.com/css/made-soulmaze" rel="stylesheet"> 
+  <script src="https://kit.fontawesome.com/5fb7ff3cb4.js" crossorigin="anonymous"></script>
 </head>
 <body class="backgroundApp">
   <app-root></app-root>
